# fast-prime-pi

./: .gitignore  CMakeLists.txt  README.md  Windows-GenProject.bat
CMake/: FindPrimecount.cmake
LaTeX/: prime-pi-convergence-graph.dvi  prime-pi-convergence-graph.tex
Source/Private/: main.cpp
scripts/: generate-graph.py  requirements.txt  test.tex
